--- a/callback.html
+++ b/callback.html
@@ -4,7 +4,7 @@
 <body>
   <script src="pkce.js"></script>
   <script>
-    const clientId = 'YOUR_CLIENT_ID';
+    const clientId = '45f2da97267d44bcb687ef81ba36986a';
     const redirectUri = 'https://sarbs22.github.io/legendary-sniffle/callback.html';
 
     async function handleRedirect() {
