--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Spotify Playlist Generator</title>
-  <script defer src="auth.js"></script>
+  <script defer src="pkce.js"></script>
   <script defer src="script.js"></script>
 </head>
 <body>
   <h1>Spotify Playlist Generator</h1>
 
-  <h2>Step 1: Enter Spotify Client ID</h2>
-  <input type="text" id="clientIdInput" placeholder="Paste your Spotify Client ID here...">
+  <h2>Step 1: Log in</h2>
   <button id="loginBtn">Login with Spotify</button>
 
-  <h2>Step 2: Choose Playlist Destination</h2>
+  <h2>Step 2: Playlist Destination</h2>
   <select id="playlistSelect">
     <option value="new">➕ Create New Playlist</option>
   </select>
   <input id="newPlaylistName" type="text" placeholder="New playlist name (if creating new)">
 
   <h2>Step 3: Paste Track IDs or URIs</h2>
-  <textarea id="trackIds" placeholder="Paste Spotify track IDs or URIs here..."></textarea>
+  <textarea id="trackIds" rows="10" cols="80" placeholder="Paste Spotify track IDs or URIs here..."></textarea>
   <br>
   <button id="createPlaylistBtn" disabled>Create/Add to Playlist</button>
 </body>
