--- a/callback.html
+++ b/callback.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
-<html>
-<head><title>Spotify Callback</title></head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Spotify Callback</title>
+</head>
 <body>
-  <script src="pkce.js"></script>
+  <p>Redirecting...</p>
   <script>
-    const redirectUri = 'https://sarbs22.github.io/legendary-sniffle/callback.html';
-
-    async function handleRedirect() {
+    (async () => {
       const params = new URLSearchParams(window.location.search);
       const code = params.get('code');
-      const codeVerifier = localStorage.getItem('code_verifier');
+      if (!code) { document.body.textContent = 'Authorization failed.'; return; }
+
+      const clientId = localStorage.getItem('client_id');
+      const verifier = localStorage.getItem('code_verifier');
+      const redirectUri = 'https://sarbs22.github.io/legendary-sniffle/callback.html';
 
       const body = new URLSearchParams({
-        client_id: clientId,
         grant_type: 'authorization_code',
-        code,
+        code: code,
         redirect_uri: redirectUri,
-        code_verifier: codeVerifier
+        client_id: clientId,
+        code_verifier: verifier
       });
 
       const res = await fetch('https://accounts.spotify.com/api/token', {
         method: 'POST',
-        headers: {
-          'Content-Type': 'application/x-www-form-urlencoded'
-        },
+        headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
         body: body.toString()
       });
 
       const data = await res.json();
-      sessionStorage.setItem('access_token', data.access_token);
-      window.location.href = 'index.html';
-    }
-
-    handleRedirect();
+      if (data.access_token) {
+        sessionStorage.setItem('access_token', data.access_token);
+        window.location.href = 'index.html';
+      } else {
+        document.body.textContent = 'Failed to obtain access token.';
+      }
+    })();
   </script>
 </body>
 </html>
