--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 <body>
   <h1>Spotify Playlist Generator</h1>
 
-  <!-- NEW: link to export subpage -->
-  <p><a href="export.html">Export Playlist Data</a></p>
-
-  <h2>Step 1: Log in</h2>
+  <!-- STEP 1: Client ID + Login -->
+  <h2>Step 1: Enter Client ID &amp; Log In</h2>
+  <input id="clientIdInput" type="text" placeholder="Enter your Spotify Client ID" style="width:300px"/>
   <button id="loginBtn">Login with Spotify</button>
 
-  <h2>Step 2: Playlist Destination</h2>
+  <!-- STEP 2: Playlist Destination -->
+  <h2>Step 2: Playlist Destination</h2>
   <select id="playlistSelect">
     <option value="new">➕ Create New Playlist</option>
   </select>
-  <input id="newPlaylistName" type="text" placeholder="New playlist name (if creating new)">
+  <input id="newPlaylistName" type="text" placeholder="New playlist name (if creating new)" />
 
-  <h2>Step 3: Paste Track IDs or URIs</h2>
+  <!-- STEP 3: Paste Track IDs -->
+  <h2>Step 3: Paste Track IDs or URIs</h2>
   <textarea id="trackIds" rows="10" cols="80" placeholder="Paste Spotify track IDs or URIs here..."></textarea>
   <br>
   <button id="createPlaylistBtn" disabled>Create/Add to Playlist</button>
